--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 </div>
                 <div class="innerFeature">
                     <div class="featureImg">
-                        <img src="images/mutual.png" alt="mutual">
+                        <img src="images/life.png" alt="Life insurance">
                     </div>
                     <div class="featureTxt">
                         <h2>Life Insurance</h2>
@@ -165,7 +165,7 @@
                 </div>
                 <div class="innerFeature">
                     <div class="featureImg">
-                        <img src="images/mutual.png" alt="mutual">
+                        <img src="images/gold.png" alt="Angel Gold">
                     </div>
                     <div class="featureTxt">
                         <h2> Angel Gold</h2>
@@ -175,7 +175,7 @@
                 </div>
                 <div class="innerFeature">
                     <div class="featureImg">
-                        <img src="images/mutual.png" alt="mutual">
+                        <img src="images/pms.png" alt="PMS">
                     </div>
                     <div class="featureTxt">
                         <h2>PMS</h2>
@@ -185,7 +185,7 @@
                 </div>
                 <div class="innerFeature">
                     <div class="featureImg">
-                        <img src="images/mutual.png" alt="mutual">
+                        <img src="images/fd.png" alt="FD">
                     </div>
                     <div class="featureTxt">
                         <h2>FD</h2>
@@ -195,7 +195,7 @@
                 </div>
                 <div class="innerFeature">
                     <div class="featureImg">
-                        <img src="images/mutual.png" alt="mutual">
+                        <img src="images/health.png" alt="Health insurance">
                     </div>
                     <div class="featureTxt">
                         <h2>Health Insurance</h2>
@@ -205,7 +205,7 @@
                 </div>
                 <div class="innerFeature">
                     <div class="featureImg">
-                        <img src="images/mutual.png" alt="mutual">
+                        <img src="images/invest.png" alt="Investment Planning">
                     </div>
                     <div class="featureTxt">
                         <h2>Investment Planning</h2>
@@ -215,7 +215,7 @@
                 </div>
                 <div class="innerFeature">
                     <div class="featureImg">
-                        <img src="images/mutual.png" alt="mutual">
+                        <img src="images/saving.png" alt="Savings Investment">
                     </div>
                     <div class="featureTxt">
                         <h2>Savings & Investment</h2>
@@ -225,7 +225,7 @@
                 </div>
                 <div class="innerFeature">
                     <div class="featureImg">
-                        <img src="images/mutual.png" alt="mutual">
+                        <img src="images/retire.png" alt="Retirements">
                     </div>
                     <div class="featureTxt">
                         <h2>Retirements</h2>
@@ -235,7 +235,7 @@
                 </div>
                 <div class="innerFeature">
                     <div class="featureImg">
-                        <img src="images/mutual.png" alt="mutual">
+                        <img src="images/equity.jpg" alt="Equity">
                     </div>
                     <div class="featureTxt">
                         <h2>Equity</h2>
@@ -295,6 +295,191 @@
                             <h2>24/7</h2>
                             <h2>Supports</h2>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="factnFigure">
+        <div class="container">
+            <div class="innerFactnFigure">
+                <div class="factTitle">
+                    <h2>FACT & FIGURE</h2>
+                </div>
+                <div class="factsFigure">
+                    <div class="figureNumbers">
+                        <h2>3047</h2>
+                        <p>HAPPY <br>
+                            CLIENTS</p>
+                    </div>
+                    <div class="figureNumbers">
+                        <h2>123</h2>
+                        <p>BRANCHES AROUND <br>
+                            THE WORLD
+                        </p>
+                    </div>
+                    <div class="figureNumbers">
+                        <h2>0.2</h2>
+                        <p>LOREM IPSUM <br>
+                            DOLOR SIT AMET</p>
+                    </div>
+                    <div class="figureNumbers">
+                        <h2>795</h2>
+                        <p>COMPLETED <br>
+                            PROJECTS</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="companyValue">
+        <div class="container">
+            <div class="mainCompanyValue">
+                <div class="testimonials">
+                    <div class="valueTitle">
+                        <h2>TESTIMONIAL</h2>
+                    </div>
+                    <div class="testSlider">
+                        <section class="swiper mySwiper" id="customerSlider">
+                            <div class="swiper-wrapper">
+                                <div class="swiper-slide">
+                                    <div class="custReview">
+                                        <div class="customerProfile">
+                                            <div class="custImg">
+                                                <img src="images/testimonial1.jpg" alt="testimonial1">
+                                            </div>
+                                            <div class="custDetails">
+                                                <h2>MeFinance is Great Firm</h2>
+                                                <p>Michale John (CEO &amp; Founder)</p>
+                                                <div class="starRating">
+                                                    <span class="iconify" data-icon="ant-design:star-filled"
+                                                        style="color: #0772ba;"></span>
+                                                    <span class="iconify" data-icon="ant-design:star-filled"
+                                                        style="color: #0772ba;"></span>
+                                                    <span class="iconify" data-icon="ant-design:star-filled"
+                                                        style="color: #0772ba;"></span>
+                                                    <span class="iconify" data-icon="ant-design:star-filled"
+                                                        style="color: #0772ba;"></span>
+                                                    <span class="iconify" data-icon="ant-design:star-filled"
+                                                        style="color: #0772ba;"></span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="customerWords">
+                                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam sapiente
+                                                temporibus officia magni officiis quia et vitae harum tur adipisicing
+                                                elit. Ducimus dolores neque aliquam eaque iure! Repellat aperiam quod
+                                                expedita hic perferendis?</p>
+                                            <img src="images/sign.png" alt="sign" class="img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="custReview">
+                                        <div class="customerProfile">
+                                            <div class="custImg">
+                                                <img src="images/testimonial1.jpg" alt="testimonial1">
+                                            </div>
+                                            <div class="custDetails">
+                                                <h2>MeFinance is Great Firm</h2>
+                                                <p>Michale John (CEO &amp; Founder)</p>
+                                                <div class="starRating">
+                                                    <span class="iconify" data-icon="ant-design:star-filled"
+                                                        style="color: #0772ba;"></span>
+                                                    <span class="iconify" data-icon="ant-design:star-filled"
+                                                        style="color: #0772ba;"></span>
+                                                    <span class="iconify" data-icon="ant-design:star-filled"
+                                                        style="color: #0772ba;"></span>
+                                                    <span class="iconify" data-icon="ant-design:star-filled"
+                                                        style="color: #0772ba;"></span>
+                                                    <span class="iconify" data-icon="ant-design:star-filled"
+                                                        style="color: #0772ba;"></span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="customerWords">
+                                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam sapiente
+                                                temporibus officia magni officiis quia et vitae harum tur adipisicing
+                                                elit. Ducimus dolores neque aliquam eaque iure! Repellat aperiam quod
+                                                expedita hic perferendis?</p>
+                                            <img src="images/sign.png" alt="sign" class="img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="custReview">
+                                        <div class="customerProfile">
+                                            <div class="custImg">
+                                                <img src="images/testimonial1.jpg" alt="testimonial1">
+                                            </div>
+                                            <div class="custDetails">
+                                                <h2>MeFinance is Great Firm</h2>
+                                                <p>Michale John (CEO &amp; Founder)</p>
+                                                <div class="starRating">
+                                                    <span class="iconify" data-icon="ant-design:star-filled"
+                                                        style="color: #0772ba;"></span>
+                                                    <span class="iconify" data-icon="ant-design:star-filled"
+                                                        style="color: #0772ba;"></span>
+                                                    <span class="iconify" data-icon="ant-design:star-filled"
+                                                        style="color: #0772ba;"></span>
+                                                    <span class="iconify" data-icon="ant-design:star-filled"
+                                                        style="color: #0772ba;"></span>
+                                                    <span class="iconify" data-icon="ant-design:star-filled"
+                                                        style="color: #0772ba;"></span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="customerWords">
+                                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam sapiente
+                                                temporibus officia magni officiis quia et vitae harum tur adipisicing
+                                                elit. Ducimus dolores neque aliquam eaque iure! Repellat aperiam quod
+                                                expedita hic perferendis?</p>
+                                            <img src="images/sign.png" alt="sign" class="img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide">
+                                    <div class="custReview">
+                                        <div class="customerProfile">
+                                            <div class="custImg">
+                                                <img src="images/testimonial1.jpg" alt="testimonial1">
+                                            </div>
+                                            <div class="custDetails">
+                                                <h2>MeFinance is Great Firm</h2>
+                                                <p>Michale John (CEO &amp; Founder)</p>
+                                                <div class="starRating">
+                                                    <span class="iconify" data-icon="ant-design:star-filled"
+                                                        style="color: #0772ba;"></span>
+                                                    <span class="iconify" data-icon="ant-design:star-filled"
+                                                        style="color: #0772ba;"></span>
+                                                    <span class="iconify" data-icon="ant-design:star-filled"
+                                                        style="color: #0772ba;"></span>
+                                                    <span class="iconify" data-icon="ant-design:star-filled"
+                                                        style="color: #0772ba;"></span>
+                                                    <span class="iconify" data-icon="ant-design:star-filled"
+                                                        style="color: #0772ba;"></span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="customerWords">
+                                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam sapiente
+                                                temporibus officia magni officiis quia et vitae harum tur adipisicing
+                                                elit. Ducimus dolores neque aliquam eaque iure! Repellat aperiam quod
+                                                expedita hic perferendis?</p>
+                                            <img src="images/sign.png" alt="sign" class="img-fluid">
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="swiper-pagination"></div>
+                        </section>
+                    </div>
+                </div>
+                <div class="ourValues">
+                    <div class="valueTitle">
+                        <h2>OUR COMPANY VALUES</h2>
                     </div>
                 </div>
             </div>
