--- a/index.html
+++ b/index.html
@@ -23,20 +23,30 @@
 <body>
     <header class="pageHeader">
         <div class="container">
-            <div class="innerHeader">
-                <p>"Welcone to Angel Wealth, your trusted advisor for more than 25 years"</p>
-                <div class="dropdown">
-                    <button class="dropbtn">All &nbsp;<span class="iconify"
-                            data-icon="dashicons:arrow-down-alt2"></span></button>
-                    <div class="dropdown-content">
-                        <a href="javascript:void(0)">01</a>
-                        <a href="javascript:void(0)">02</a>
+            <div class="newHeaderMain">
+                <div class="newHeaderPara">
+                    <p>"Welcone to Angel Wealth, your trusted advisor for more than 25 years"</p>
+                </div>
+                <div class="searchWithIcon">
+                    <div class="leftDroptown">
+                        <select class="form-control" id="select" name="select">
+                            <option>All</option>
+                            <option>All</option>
+                        </select>
                     </div>
-                    <input type="text" class="input-feild" placeholder="Search item....">
+                    <div class="rightTxtBox">
+                        <input type="text" placeholder="search Here....">
+                        <span class="iconify" data-icon="fa:search"></span>
+                    </div>
+                </div>
+                <div class="dayTime">
+                    <p>29 MARCH 2016 1:43 PM</p>
+                </div>
+                <div class="afterSearchIcon">
                     <span class="iconify" data-icon="fa:search"></span>
                 </div>
-                <p>29 MARCH 2016 1:43 PM</p>
             </div>
+
         </div>
     </header>
 
@@ -98,17 +108,19 @@
             <div class="container">
                 <ul>
                     <li><a href="javascript:void(0)" class="active">Home</a></li>
-                    <li>
+                    <li class="mobdropDown">
                         <select class="form-control" id="sel2" name="select">
                             <option>Mutual funds</option>
                             <option>Mutual funds</option>
                         </select>
+                        <span class="iconify" data-icon="akar-icons:chevron-down"></span>
                     </li>
-                    <li>
+                    <li class="mobdropDown">
                         <select class="form-control" id="sel2" name="select">
                             <option>life insurance</option>
                             <option>life insurance</option>
                         </select>
+                        <span class="iconify" data-icon="akar-icons:chevron-down"></span>
                     </li>
                     <li><a href="javascript:void(0)">ange gold</a></li>
                     <li><a href="javascript:void(0)">fd</a></li>
@@ -781,8 +793,7 @@
                         <img src="images/foot-logo.png" alt="" class="img-fluid">
                     </div>
                     <div class="footerPara">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam harum odit quibusdam
-                            nesciunt optio recu Lorem ipsum dolor sit amet.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam harum odit Lorem ipsum dolor sit amet..</p>
                         <div class="callNo">
                             <span class="iconify" data-icon="bxs:phone"></span>
                             <a href="tel:18002549874">1800 - 254 - 9874</a>
